增加视图返回

--- a/film-web/src/main/resources/templates/html/index.html
+++ b/film-web/src/main/resources/templates/html/index.html
@@ -5,6 +5,6 @@
     <script src="/lib/jquery.min.js"></script>
 </head>
 <body>
-<h1>Hello Welcome FreeMarker!!</h1>
+<h1>my name is 张嘉琛,welcome to my home!!</h1>
 </body>
 </html>
