增加IP过滤器

--- a/film-web/src/main/resources/templates/html/index.html
+++ b/film-web/src/main/resources/templates/html/index.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="download fl">
                     <span class="ico downloadico"></span>
-                    <a href="">下载嘉琛客户端</a>
+                    <a href="">下载客户端</a>
                 </li>
                 <li class="word fl">
                     <span class="ico wordico"></span>
@@ -2807,7 +2807,7 @@
         </ul>
     </div>
     <div class="last4">
-        caakckkk @ 嘉琛电影网 all hkacj
+        张嘉琛 @ 嘉琛电影网
     </div>
 </footer>
 </body>
