新增收钱的玩意儿

--- a/film-web/src/main/resources/templates/html/index.html
+++ b/film-web/src/main/resources/templates/html/index.html
@@ -2808,9 +2808,9 @@
     </div>
     <div class="last4">
         张嘉琛 @ 嘉琛电影网
-        如果感觉不错的话 请打赏一下 么么哒
-        <img src="img/vip/aliPay.jpg">
-        <img src="img/vip/wechatPay.jpg">
+        如果感觉不错的话 请打赏一下 么么哒<br>
+        <img src="img/vip/aliPay.jpg" width="200px" height="200px">
+        <img src="img/vip/wechatPay.jpg" width="200px" height="200px">
     </div>
 </footer>
 </body>
