--- a/film-web/src/main/resources/templates/html/index.html
+++ b/film-web/src/main/resources/templates/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -61,6 +61,9 @@
             </ul>
         </div>
     </nav>
+    <video src="../../static/video/1.mp4" controls="controls">
+        你的浏览器不支持当前视频
+    </video>
     <div class="focus">
         <div class="focusmenubox">
             <ul class="focusmenu">
